--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,6 @@
-cmake_minimum_required(VERSION 3.17)
+cmake_minimum_required(VERSION 3.20)
 project(circuits)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(
-        circuits
-        main.cpp
-        Wire.cpp Wire.h
-        Point.cpp Point.h
-        Circuit.cpp Circuit.h
-        CircuitActive.cpp CircuitActive.h
-        Matrix.cpp Matrix.h)
-
-add_subdirectory(google_tests)
+add_executable(circuits main.cpp Wire.cpp Wire.h Point.cpp Point.h Circuit.cpp Circuit.h CircuitActive.cpp CircuitActive.h Matrix.cpp Matrix.h)
