--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,15 @@
 cmake_minimum_required(VERSION 3.17)
 project(circuits)
 
-add_subdirectory(tests)
-
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(circuits main.cpp src/Wire.cpp src/Wire.h src/Point.cpp src/Point.h src/Circuit.cpp src/Circuit.h src/CircuitActive.cpp src/CircuitActive.h src/Matrix.cpp src/Matrix.h tests/TestMatrix.cpp)
+add_executable(circuits main.cpp src/Wire.cpp src/Wire.h src/Point.cpp src/Point.h src/Circuit.cpp src/Circuit.h src/CircuitActive.cpp src/CircuitActive.h src/Matrix.cpp src/Matrix.h )
+#add_executable(tests/TestMatrix.cpp)
+
+add_subdirectory(tests)
+
+#target_link_libraries(
+#        ${PROJECT_NAME}
+#        gtest
+#        gtest_main
+#)
