--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -34,5 +34,5 @@ jobs:
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C ${{env.BUILD_TYPE}}
+      run: GTEST_OUTPUT=xml:test-results/ GTEST_COLOR=1 ctest -V
       
